vlib/v/checker/tests/arraydecompose_arg2_err.vv
fn test_arr(i int) string {
	return '${i}'
}

fn main() {
	var := []f64{}
	test_arr(...var)
}
